Fix sizes, remove unnecessary shift button on toshiba 614 height (125%?)

--- a/toshiba1.css
+++ b/toshiba1.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:1241px) and (max-height:699px) and (min-width:1240px) and (min-height:698px)  {
+@media screen and (max-width:1242px) and (max-height:699px) and (min-width:1241px) and (min-height:698px)  {
     .btn-subject {
         border: none !important;
         height: unset !important;
