--- a/toshiba2.css
+++ b/toshiba2.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:938px) and (max-height:553px) and (min-width:936px) and (min-height:551px)  {
+@media screen and (max-width:1093px) and (max-height:615px) and (min-width:1092px) and (min-height:614px)  {
     .btn-subject {
         border: none !important;
         height: unset !important;
@@ -114,29 +114,6 @@
         padding: 10px 0px !important;
         word-break: break-word !important;
     }
-    body:has(.worksheet-tool):not(:has(.content-answer-content)) .shiftbtn {
-        display: unset !important;
-        position: fixed;
-        top: 140px;
-        height: 30px;
-        width: 30px;
-        left: 376px;
-        z-index: 252;
-        padding: 0;
-    }
-    body:has(.worksheet-tool):not(:has(.content-answer-content)):has(div.worksheet-group.landscape) .shiftbtn {
-        left: 656px;
-    }
-    body:has(.worksheet-tool):has(.content-answer-content) .shiftbtn {
-        display: unset !important;
-        position: fixed;
-        top: 140px;
-        height: 30px;
-        width: 30px;
-        left: 751px;
-        z-index: 252;
-        padding: 0;
-    }
     body:not(:has(.content-answer-content)) #studentInfoPullDown {
         min-width: 372px !important;
     }
@@ -146,12 +123,6 @@
     }
     .worksheet-container > .worksheet-group.single:last-child .worksheet-group-page:last-child .worksheet-container > div {
         margin-top: -1px;
-    }
-    .worksheet-container.shiftup > .worksheet-group .worksheet-container > div {
-        margin-top: -63px;
-    }
-    .worksheet-container.shiftup > .worksheet-group.single:last-child .worksheet-group-page:last-child .worksheet-container > div {
-        margin-top: -65px;
     }
     .worksheet-group {
         margin: 0px -19px !important;
